Fix overflowing recipe name on recipe tile

--- a/app/assets/stylesheets/recipe_tile.css.scss
+++ b/app/assets/stylesheets/recipe_tile.css.scss
@@ -3,6 +3,13 @@
   float: left;
   margin: 15px;
   position: relative;
+  overflow: hidden;
+  &:hover{
+    box-shadow: 0px 0px 10px black;
+  }
+  &:active{
+    box-shadow: inset 0px 0px 10px black;
+  }
 
   h2{
     font-size: 30px;
@@ -33,12 +40,6 @@
     text-align: center;
     border-radius: 2px;
     box-shadow: 0px 0px 5px black;
-    &:hover{
-      box-shadow: 0px 0px 10px black;
-    }
-    &:active{
-      box-shadow: inset 0px 0px 10px black;
-    }
     figure{
       height: 50px;
       width: 50px;
